kubernetes/deployment.yml
apiVersion: v1
kind: Namespace
metadata:
  name: authentication

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skill-zag-login-service-dev
  namespace: authentication
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: skill-zag-login-service-dev
      version: 'v1'
  template:
    metadata:
      labels:
        app: skill-zag-login-service-dev
        version: 'v1'
    spec:
      containers:
        - name: auth-service-dev
          image:  devunifiedappregistry.azurecr.io/auth-service-dev:latest
          ports:
            - name: http
              containerPort: 8055
          resources:
            requests:
              memory: '512Mi'
              cpu: '300m'
            limits:
              memory: '785Mi'
              cpu: '500m'
          # readinessProbe:
          #   httpGet:
          #     path: /search/management/health
          #     port: http
          #   initialDelaySeconds: 20
          #   periodSeconds: 15
          #   failureThreshold: 6
          # livenessProbe:
          #   httpGet:
          #     path: /search/management/health
          #     port: http
          #   initialDelaySeconds: 120
