kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: skill-zag-login-service-dev
  namespace: authentication
  labels:
    app: skill-zag-login-service-dev

spec:
  selector:
    app: auth-service-dev
  sessionAffinity: ClientIP
  type: ClusterIP
  # sessionAffinityConfig:
  #   clientIP:
  #     timeoutSeconds: 600
  ports:
    - name: http
      port: 8055
